<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editLayout"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddTaskActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:divider="@android:color/transparent"
        android:dividerPadding="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="horizontal"
            android:dividerPadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <ImageView android:src="@drawable/ic_view_title"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <EditText
                android:id="@+id/editItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="The task name"
                android:inputType="text"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:dividerPadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <ImageView android:src="@drawable/ic_view_price"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Estimated Price"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:dividerPadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <ImageView android:src="@drawable/ic_view_calendar"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <EditText
                android:id="@+id/editDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/dueDate"
                android:inputType="none"
                android:onClick="changeDueDate" />
            <ImageButton
                android:id="@+id/btnDeleteDueDate"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:layout_above="@+id/editTags"
                android:layout_toRightOf="@+id/editDueDate"
                android:src="@drawable/ic_delete"
                android:hint="@string/delete"
                android:onClick="deleteDueDate" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:dividerPadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <ImageView android:src="@drawable/ic_view_tag"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <EditText
                android:id="@+id/editTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/lists"
                android:inputType="none"
                android:onClick="chooseTags" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:dividerPadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <ImageView android:src="@drawable/ic_view_note"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <EditText
                android:id="@+id/editNotes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/Notes"
                android:inputType="textImeMultiLine" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:onClick="save"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:onClick="cancel"
        android:text="@string/btn_cancel" />

</RelativeLayout>